# tamsaek

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/tamsaek-cli/: Cargo.toml
crates/tamsaek-cli/src/: main.rs
crates/tamsaek-cli/tests/: cli_integration.rs
crates/tamsaek-core/: Cargo.toml
crates/tamsaek-core/src/: document.rs  error.rs  index.rs  lib.rs  search.rs
crates/tamsaek-core/src/metadata/: db.rs  mod.rs  schema.rs  store.rs
crates/tamsaek-core/src/query/: dsl.rs  mod.rs  parser.rs
crates/tamsaek-core/src/scoring/: bonuses.rs  mod.rs  rrf.rs
crates/tamsaek-core/src/vector/: mod.rs  store.rs
crates/tamsaek-mcp/: Cargo.toml
crates/tamsaek-mcp/src/: main.rs
crates/tamsaek-mcp/src/tools/: index.rs  mod.rs  search.rs  stats.rs
crates/tamsaek-search-core/: Cargo.toml
crates/tamsaek-search-core/src/: ai.rs  document.rs  error.rs  lib.rs
crates/tamsaek-search-core/src/ai/: embedding.rs  intent.rs  llm.rs  mod.rs  query_expander.rs  query_parser.rs  reranker.rs
crates/tamsaek-search-core/src/ai/agent/: mod.rs  mode.rs  search_agent.rs  tools.rs
crates/tamsaek-search-core/src/index/: mod.rs  traits.rs
crates/tamsaek-search-core/src/pipeline/: config.rs  hybrid.rs  mod.rs
crates/tamsaek-search-core/src/query/: dsl.rs  mod.rs  parser.rs
crates/tamsaek-search-core/src/scoring/: bonuses.rs  mod.rs  rrf.rs
crates/tamsaek-storage/: Cargo.toml
crates/tamsaek-storage/src/: async_db.rs  async_document.rs  db.rs  document.rs  error.rs  lib.rs  schema.rs  tantivy_fts.rs  vector_store.rs
