[workspace]
resolver = "2"
members = ["crates/tamsaek-core", "crates/tamsaek-mcp", "crates/tamsaek-cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.75"

[workspace.dependencies]
tantivy = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"

[profile.release]
lto = "thin"
strip = true
