[package]
name = "tamsaek-mcp"
version.workspace = true
edition.workspace = true
description = "MCP server for local file search"

[[bin]]
name = "tamsaek-mcp"
path = "src/main.rs"

[dependencies]
tamsaek-core = { path = "../tamsaek-core" }
rmcp = { version = "0.15", features = ["server", "macros", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
dirs = "5"
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
